AUS-3208 Fix overflowing tree view query panel

--- a/project/src/app/modalwindow/modalwindow.scss
+++ b/project/src/app/modalwindow/modalwindow.scss
@@ -54,6 +54,7 @@ div.pull-left {
 
 .tab-content {
     padding: 5px;
+    overflow-y: auto;
 }
 
 .modal-panel-size {
